# MessageHub

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  README.md  README.zh.md
.github/workflows/: README.md  ci-android.yml  ci-desktop.yml  ci-release.yml
.opencode/: opencode.json
DeskDisplay/: Cargo.toml
DeskDisplay/src/: actions.rs  client.rs  config.rs  error.rs  i18n.rs  lib.rs  main.rs
DeskDisplay/src/backends/: linux.rs  mock.rs  mod.rs  stub.rs  windows.rs
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/im/zyx/phonebridge/: PhoneBridgeApp.kt
android/app/src/main/kotlin/im/zyx/phonebridge/data/: PrefsRepository.kt
android/app/src/main/kotlin/im/zyx/phonebridge/di/: AppModule.kt
android/app/src/main/kotlin/im/zyx/phonebridge/keepalive/: AccessibilityServiceAbility.kt  BootReceiver.kt  BridgeAbility.kt  FloatingConsoleService.kt  HeartbeatController.kt  KeepAliveWorkScheduler.kt  MissingAbilityNotifier.kt  NotificationListenerAbility.kt  SelfCheckWorker.kt
android/app/src/main/kotlin/im/zyx/phonebridge/network/: BridgeClient.kt  BridgeService.kt  NsdRegistrar.kt
android/app/src/main/kotlin/im/zyx/phonebridge/notification/: NotificationRelayService.kt  RecentNotificationsCache.kt
android/app/src/main/kotlin/im/zyx/phonebridge/pairing/: PairingMachine.kt
android/app/src/main/kotlin/im/zyx/phonebridge/sms/: SmsReceiver.kt
android/app/src/main/kotlin/im/zyx/phonebridge/telephony/: CallController.kt
android/app/src/main/kotlin/im/zyx/phonebridge/ui/: MainActivity.kt
android/app/src/main/kotlin/im/zyx/phonebridge/ui/components/: PermissionsSection.kt
android/app/src/main/kotlin/im/zyx/phonebridge/ui/screens/: AboutScreen.kt  AddByIpScreen.kt  PairingScreen.kt  PermissionsScreen.kt  SettingsScreen.kt
android/app/src/main/kotlin/im/zyx/phonebridge/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_floating_handle.xml  ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-zh/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
android/app/src/test/kotlin/im/zyx/phonebridge/keepalive/: HeartbeatControllerTest.kt  NotificationListenerAbilityTest.kt
android/app/src/test/kotlin/im/zyx/phonebridge/notification/: RecentNotificationsCacheTest.kt
android/app/src/test/kotlin/im/zyx/phonebridge/pairing/: PairingMachineTest.kt
android/app/src/test/kotlin/im/zyx/phonebridge/sms/: SmsReceiverTest.kt
android/core/: build.gradle.kts
android/core/src/main/kotlin/im/zyx/phonebridge/core/crypto/: CertGen.kt  Ecdh.kt  Hkdf.kt  PairingCode.kt  PairingCodeSpec.kt
android/core/src/main/kotlin/im/zyx/phonebridge/core/protocol/: Envelope.kt  Json.kt  MessageType.kt  Payloads.kt  Types.kt
android/core/src/test/kotlin/im/zyx/phonebridge/core/crypto/: CertGenTest.kt  EcdhTest.kt  HkdfTest.kt  PairingCodeTest.kt
android/core/src/test/kotlin/im/zyx/phonebridge/core/protocol/: EnvelopeTest.kt
android/gradle/: libs.versions.toml
crates/message-center/: Cargo.toml
crates/message-center/src/: app_state.rs  center_sink.rs  cert_loader.rs  console_bus.rs  display_auth.rs  display_bus.rs  display_ws.rs  i18n.rs  identity.rs  lib.rs  main.rs  mdns_service.rs  noise_filter.rs  openapi.rs  pair_cli.rs  rest.rs  static_files.rs  tls.rs  ws.rs
crates/message-center/tests/: integration_console_ws.rs  integration_dispatch.rs
crates/phonebridge-bus/: Cargo.toml
crates/phonebridge-bus/src/: lib.rs
crates/phonebridge-core/: Cargo.toml
crates/phonebridge-core/src/: config.rs  lib.rs  logging.rs  paths.rs
crates/phonebridge-crypto/: Cargo.toml
crates/phonebridge-crypto/src/: cert.rs  ecdh.rs  fingerprint.rs  lib.rs  pairing_code.rs
crates/phonebridge-daemon/: Cargo.toml
crates/phonebridge-daemon/src/: app_state.rs  cert_loader.rs  console_bus.rs  daemon_sink.rs  identity.rs  lib.rs  main.rs  mdns_service.rs  openapi.rs  pair_cli.rs  rest.rs  static_files.rs  tls.rs  ws.rs
crates/phonebridge-daemon/tests/: integration_console_ws.rs  integration_dispatch.rs
crates/phonebridge-display/: Cargo.toml
crates/phonebridge-display/src/: actions.rs  client.rs  config.rs  error.rs  i18n.rs  lib.rs  main.rs
crates/phonebridge-display/src/backends/: linux.rs  mod.rs  stub.rs
crates/phonebridge-net/: Cargo.toml
crates/phonebridge-net/src/: lib.rs  mdns.rs  pairing.rs  registry.rs  tls_pinning.rs  ws_handler.rs
crates/phonebridge-net/tests/: integration_pairing.rs
crates/phonebridge-proto/: Cargo.toml
crates/phonebridge-proto/src/: envelope.rs  lib.rs  payload.rs  types.rs
crates/phonebridge-storage/: Cargo.toml
crates/phonebridge-storage/migrations/: 20260101000001_init.sql  20260606090000_add_hardware_id.sql  20260606090001_prune_duplicate_devices.sql
crates/phonebridge-storage/src/: lib.rs  models.rs  pool.rs
docs/: android-permissions.md  dev-setup.md  protocol-v1.md  threat-model.md
frontend/: .env.example  .gitignore  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(console)/: layout.tsx  page.tsx
frontend/app/(console)/about/: page.tsx
frontend/app/(console)/calls/: page.tsx
frontend/app/(console)/dashboard/: page.tsx
frontend/app/(console)/devices/: page.tsx
frontend/app/(console)/notifications/: page.tsx
frontend/app/(console)/pairings/: page.tsx
frontend/app/(console)/settings/: page.tsx
frontend/app/(console)/sms/: page.tsx
frontend/components/: LiveActivity.tsx
frontend/lib/: api.ts  i18n.tsx
schema/: protocol.schema.json
scripts/: e2e-smoke.sh  fake_android_notify.py  setup.sh  validate-schema.sh
scripts/test-fixtures/: call_state.json  device_hello.json  notification_received.json  pair_challenge.json  pair_challenge_invalid.json  pair_complete.json  sms_send_request.json
