[workspace]
resolver = "2"
members = [
    "crates/phonebridge-proto",
    "crates/phonebridge-core",
    "crates/phonebridge-crypto",
    "crates/phonebridge-net",
    "crates/phonebridge-storage",
    "crates/phonebridge-bus",
    "crates/message-center",
    "DeskDisplay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-or-later"
authors = ["PhoneBridge Contributors"]
repository = "https://github.com/2926295173/MessageHub"
homepage = "https://github.com/2926295173/MessageHub"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# HTTP / WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "set-header"] }
hyper = "1.4"
http = "1.1"
http-body-util = "0.1"

# WebSocket low-level
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "macros", "chrono", "uuid", "json", "migrate"] }

# Time / IDs
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zvariant = "4.2"

# Crypto (ring-only provider for rustls and rcgen; avoids aws-lc-rs toolchain dep)
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging", "ring"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"

# mDNS
mdns-sd = "0.11"

# Config
toml = "0.8"
directories = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "chrono", "tracing-log"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Embedded assets
include_dir = "0.7"
mime_guess = "2.0"

# Misc
bytes = "1.7"
parking_lot = "0.12"
once_cell = "1.20"
dashmap = "6.1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
