[package]
name = "phonebridge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core utilities: config, paths, logging init."

[dependencies]
serde.workspace = true
toml.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["full", "test-util"] }
