[package]
name = "phonebridge-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cryptography: ECDH P-256, HKDF, X.509 self-signed cert generation, TLS pinning."

[dependencies]
ring.workspace = true
rustls.workspace = true
rcgen.workspace = true
hkdf.workspace = true
sha2.workspace = true
base64.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
hex-literal = "0.4"
